# pwnobd

./: LICENSE  README.md  pyproject.toml
src/pwnobd/: __init__.py  cli.py  core.py  exceptions.py
src/pwnobd/modules/: bluetooth.py  debug.py  interactive.py  recon.py  shark.py
src/pwnobd/modules/attacks/: datasets.py  elm327.py  example.py
src/pwnobd/modules/devices/: elm327.py
